--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="app">
         <h1>Mail list</h1>
         <ul>
-            <li v-for="mail in mailList">{{mail}}</li>
+            <li v-if="mailList.length == 10" v-for="mail in mailList">{{mail}}</li>
         </ul>
 
 
